--- a/eval_llm4syn.ipynb
+++ b/eval_llm4syn.ipynb
@@ -728,17 +728,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 11. Generating LaTeX Table of Top Predictions\n",
+    "\n",
+    "Here, we generate a LaTeX table containing the top `1900` predictions based on the `gts.1` metric. The table is saved to a `.tex` file, and the content of the file is printed for review.\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Generated LaTeX table saved to: ./tex/si_tab_tgtope2ceq_dgpt2_v1.2.1-1.1_1900.tex\n",
       "\\begin{longtable}{c|c|p{10cm}|c|c}\n",
       "\\caption{Selected examples of TGTOPE2CEQ}\\label{tab_s_tgtope2ceq}\\\\\n",
       "No. &  Model & Text & GTS & JS \\\\\n",
@@ -12167,10 +12172,11 @@
     "table_save = table.sort_values(by=['gts.1'], ascending=False)[:len_out]\n",
     "\n",
     "# Specify the output file for the LaTeX table\n",
-    "table_file = f\"./tex/si_tab_{task.lower()}_{len_out}.tex\"\n",
+    "table_file = f\"./tex/si_tab_{save_header}_{len_out}.tex\"\n",
     "\n",
     "# Generate the LaTeX table using the predefined function\n",
     "generate_latex_table(table_file, task, pred_color, table_save)\n",
+    "print(f\"Generated LaTeX table saved to: {table_file}\")\n",
     "\n",
     "# Load and print the generated LaTeX table\n",
     "with open(table_file, 'r') as f:\n",
