--- a/eval_llm4syn.ipynb
+++ b/eval_llm4syn.ipynb
@@ -470,14 +470,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TGTOPE2CEQ (GTS) 0: 0.017\n",
+      "TGTOPE2CEQ (GTS) 0: 0.017\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data2/rokabe/llm4syn/utils/periodic_trends.py:165: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'La' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  elements.period[i] = \"La\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "TGTOPE2CEQ (GTS) 1: 0.835\n",
       "TGTOPE2CEQ (JS) 0: 0.004\n",
       "TGTOPE2CEQ (JS) 1: 0.705\n"
@@ -535,6 +549,11 @@
     "        ax.tick_params(axis='x', labelsize=fsize)\n",
     "        ax.tick_params(axis='y', labelsize=fsize)\n",
     "        ax.set_title(f'{task.upper()} ({metric_key.upper()})', fontsize=fsize)\n",
+    "        \n",
+    "        \n",
+    "        from utils.periodic_trends import plotter\n",
+    "        p = plotter(join(save_dir, csv_file), output_filename=join(save_dir, f\"{save_header}_elem_{metric_key}.{j}.html\"), under_value=0, over_value=1)\n",
+    "\n",
     "\n",
     "# Add a title for the entire figure\n",
     "fig.suptitle(save_header.upper() + f' (n={len(data)})', fontsize=fsize)\n",
