added more in investigate

--- a/investigate_data.ipynb
+++ b/investigate_data.ipynb
@@ -39,72 +39,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1677/1677 [00:00<00:00, 510475.93it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Out of 1677 targets in test data,\n",
-      "515(0.307) with data leakage (in both test and train);\n",
-      "1162(0.693) without data leakage (in only test but not train)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from collections import defaultdict\n",
-    "from tqdm import tqdm\n",
-    "from datasets import disable_progress_bar\n",
-    "disable_progress_bar()\n",
-    "all_tgts=set([example['label'] for example in dataset['train']]+[example['label'] for example in dataset['test']])\n",
-    "test_tgts=set([example['label'] for example in dataset['test']])\n",
-    "count_notest, count_yestestnotrain, count_dataleaked = 0, 0, 0\n",
-    "# First, create dictionaries to store label counts for each split\n",
-    "train_labels = defaultdict(int)\n",
-    "test_labels = defaultdict(int)\n",
-    "\n",
-    "# Count occurrences of each label in one pass\n",
-    "for split in ['train', 'test']:\n",
-    "    for example in dataset[split]:\n",
-    "        if split == 'train':\n",
-    "            train_labels[example['label']] += 1\n",
-    "        else:\n",
-    "            test_labels[example['label']] += 1\n",
-    "\n",
-    "# Initialize counters\n",
-    "count_notest = 0\n",
-    "count_yestestnotrain = []\n",
-    "count_dataleaked = 0\n",
-    "\n",
-    "# Process all unique labels\n",
-    "for tgtoi in tqdm(test_tgts):\n",
-    "    if test_labels.get(tgtoi, 0) == 0:\n",
-    "        count_notest += 1\n",
-    "    elif train_labels.get(tgtoi, 0) == 0:\n",
-    "        count_yestestnotrain.append(test_labels.get(tgtoi, 0))\n",
-    "    else:\n",
-    "        count_dataleaked += 1\n",
-    "\n",
-    "print(f\"Out of {len(test_tgts)} targets in test data,\\n{count_dataleaked}({round(count_dataleaked/len(test_tgts),3)}) with data leakage (in both test and train);\\n{len(count_yestestnotrain)}({round(len(count_yestestnotrain)/len(test_tgts),3)}) without data leakage (in only test but not train)\")#,\\n\\t{count_notest} not in test data\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -237,6 +171,184 @@
     "        pprint(Counter([example['text'] for example in filtered_dataset]).most_common())\n",
     "        print()\n",
     "    print(\"\\n##############\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lhs2rhs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1797/1797 [00:00<00:00, 560300.65it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 1797 points in test data,\n",
+      "459(0.255) with data leakage (in both test and train);\n",
+      "1338(0.745) without data leakage (in only test but not train)\n",
+      "##############\n",
+      "\n",
+      "\n",
+      "rhs2lhs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1784/1784 [00:00<00:00, 885414.55it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 1784 points in test data,\n",
+      "584(0.327) with data leakage (in both test and train);\n",
+      "1200(0.673) without data leakage (in only test but not train)\n",
+      "##############\n",
+      "\n",
+      "\n",
+      "lhsope2rhs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1941/1941 [00:00<00:00, 1024300.96it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 1941 points in test data,\n",
+      "107(0.055) with data leakage (in both test and train);\n",
+      "1834(0.945) without data leakage (in only test but not train)\n",
+      "##############\n",
+      "\n",
+      "\n",
+      "rhsope2lhs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1930/1930 [00:00<00:00, 1118249.31it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 1930 points in test data,\n",
+      "208(0.108) with data leakage (in both test and train);\n",
+      "1722(0.892) without data leakage (in only test but not train)\n",
+      "##############\n",
+      "\n",
+      "\n",
+      "tgt2ceq\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1715/1715 [00:00<00:00, 1165084.44it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 1715 points in test data,\n",
+      "530(0.309) with data leakage (in both test and train);\n",
+      "1185(0.691) without data leakage (in only test but not train)\n",
+      "##############\n",
+      "\n",
+      "\n",
+      "tgtope2ceq\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1940/1940 [00:00<00:00, 908648.77it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 1940 points in test data,\n",
+      "130(0.067) with data leakage (in both test and train);\n",
+      "1810(0.933) without data leakage (in only test but not train)\n",
+      "##############\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for task in ['lhs2rhs', 'rhs2lhs', 'lhsope2rhs', 'rhsope2lhs', 'tgt2ceq', 'tgtope2ceq']:\n",
+    "    print(task)\n",
+    "    separator = separator_dict[task]\n",
+    "    dataset = load_and_sample_data(data_path, task, separator, te_ratio=0.1, cut=cut, arrow=arrow, sample_ratio=sample_ratio, save_idx_name=None)\n",
+    "\n",
+    "    all_tgts=set([example['label'] for example in dataset['train']]+[example['label'] for example in dataset['test']])\n",
+    "    test_tgts=set([example['label'] for example in dataset['test']])\n",
+    "    count_notest, count_yestestnotrain, count_dataleaked = 0, 0, 0\n",
+    "    # First, create dictionaries to store label counts for each split\n",
+    "    train_labels = defaultdict(int)\n",
+    "    test_labels = defaultdict(int)\n",
+    "\n",
+    "    # Count occurrences of each label in one pass\n",
+    "    for split in ['train', 'test']:\n",
+    "        for example in dataset[split]:\n",
+    "            if split == 'train':\n",
+    "                train_labels[example['label']] += 1\n",
+    "            else:\n",
+    "                test_labels[example['label']] += 1\n",
+    "\n",
+    "    # Initialize counters\n",
+    "    count_notest = 0\n",
+    "    count_yestestnotrain = []\n",
+    "    count_dataleaked = 0\n",
+    "\n",
+    "    # Process all unique labels\n",
+    "    for tgtoi in tqdm(test_tgts):\n",
+    "        if test_labels.get(tgtoi, 0) == 0:\n",
+    "            count_notest += 1\n",
+    "        elif train_labels.get(tgtoi, 0) == 0:\n",
+    "            count_yestestnotrain.append(test_labels.get(tgtoi, 0))\n",
+    "        else:\n",
+    "            count_dataleaked += 1\n",
+    "    \n",
+    "    print(f\"Out of {len(test_tgts)} points in test data,\\n{count_dataleaked}({round(count_dataleaked/len(test_tgts),3)}) with data leakage (in both test and train);\\n{len(count_yestestnotrain)}({round(len(count_yestestnotrain)/len(test_tgts),3)}) without data leakage (in only test but not train)\\n##############\\n\\n\")#)\")#,\\n\\t{count_notest} not in test data\")"
    ]
   }
  ],
